Fixing a few more things

--- a/data.css
+++ b/data.css
@@ -102,10 +102,9 @@ section {
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     gap: 32px;
-    padding: 0 5% 90px;
-    justify-items: center;
+    padding: 40px 60px;
 }
 
 /* ---------------------------------------- */
